--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                 <div class="p-6 rounded-xl shadow-xl bg-white bg-opacity-90 text-center fade-in">
                     <h3 class="text-xl font-semibold text-gray-800 mb-4">AI 추천</h3>
                     <p class="text-gray-600 mb-4">당신의 취향에 맞춘 스마트한 제안을 받아보세요.</p>
-                    <button class="bg-pink-500 text-white px-6 py-3 rounded-lg font-semibold btn-hover opacity-70 cursor-not-allowed">곧 출시!</button>
+                    <a href="https://9ardenx.github.io/ai-chat-front/index.html">
+                    <button class="bg-pink-500 text-white px-6 py-3 rounded-lg font-semibold btn-hover opacity-70 cursor-not-allowed">클릭해주세요!</button>
+                    </a>
                 </div>
                 <div class="p-6 rounded-xl shadow-xl bg-white bg-opacity-90 text-center fade-in">
                     <h3 class="text-xl font-semibold text-gray-800 mb-4">커뮤니티</h3>
