--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main class="container mx-auto px-4 py-8">
         <section id="home" class="text-center py-16 fade-in">
-            <h2 class="text-5xl font-bold mb-6 gola-font text-transparent bg-clip-text bg-gradient-to-r from-pink-400 via-purple-500 to-indigo-500 animate-pulse">선택장애? <br>GOLAGOLA로 해결!</h2>
+            <h2 class="text-4xl md:text-5xl font-bold text-white mb-6 drop-shadow-lg">선택장애? <span class="gola-font">GOLAGOLA</span>로 해결!</h2>
             <p class="text-xl text-gray-700 mb-10">Solving Decision Paralysis</p>
             <p class="text-lg text-gray-600 mb-12">다양한 랜덤 도구와 친구들의 피드백으로 간편하게 선택해보세요.</p>
             <div class="max-w-md mx-auto">
@@ -41,7 +41,7 @@
             </div>
         </section>
         <section class="py-16">
-            <h2 class="text-4xl font-bold text-center mb-12 text-gray-800">GOLAGOLA로 선택장애 고민 해결</h2>
+            <h2 class="text-3xl font-bold text-white text-center mb-12 drop-shadow-lg"><span class="gola-font">GOLAGOLA</span>로 선택장애 고민 해결</h2>
             <div class="grid md:grid-cols-3 gap-8">
                 <div class="p-6 rounded-xl shadow-xl bg-white bg-opacity-90 text-center fade-in">
                     <h3 class="text-xl font-semibold text-gray-800 mb-4">랜덤 도구</h3>
