--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <main class="container mx-auto px-4 py-8">
         <section id="home" class="text-center py-16 fade-in">
             <h2 class="text-4xl md:text-5xl font-bold text-white mb-6 drop-shadow-lg">선택장애? <span class="gola-font">GOLAGOLA</span>로 해결!</h2>
-            <p class="text-xl text-gray-700 mb-10">Solving Decision Paralysis</p>
-            <p class="text-lg text-gray-600 mb-12">다양한 랜덤 도구와 친구들의 피드백으로 간편하게 선택해보세요.</p>
+            <p class="text-lg text-white mb-8 max-w-2xl mx-auto drop-shadow">Solving Decision Paralysis</p>
+            <p class="text-lg text-white mb-8 max-w-2xl mx-auto drop-shadow">다양한 랜덤 도구와 친구들의 피드백으로 간편하게 선택해보세요.</p>
             <div class="max-w-md mx-auto">
                 <input id="quickDecision" type="text" placeholder="지금 바로 고민을 입력하세요!" class="w-full px-4 py-3 rounded-lg shadow-md focus:ring-pink-500 focus:border-pink-500">
                 <button onclick="startDecision()" class="mt-6 bg-pink-500 text-white px-8 py-3 rounded-lg font-semibold text-lg btn-hover">지금 선택!</button>
